2003-04-11  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	*  libgnome/gnome-url.c (gnome_url_show_with_env):
	Make sure url substitution takes place for customized web
	browser command. Fixes bug#108909.

	Reviewed by: Mark McLoughlin <mark@skynet.ie>

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS

2003-03-16  Andras Timar  <timar@gnome.hu>

	* help-converters/docbook/gnome-customization/l10n.xml:
        Added Hungarian translation.

2003-02-13  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Require intltool version that supports
	merging translations of .schemas files
	* doc/reference/Makefile.am: Removed extra '\'
	* libgnome/gnome-help.c (gnome_help_display_desktop_with_env):
	Plug a leak.
	
2003-02-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* help-converters/gnome-vfs-module/Makefile.am:
	Fix tinderbox bustage introduced by my previous commit.

2003-02-10  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* help-converters/gnome-vfs-module/Makefile.am:
	* help-converters/gnome-vfs-module/help-methods.conf:
	* help-converters/gnome-vfs-module/help-methods.conf.in:
	be sure to generate help-methods.conf based on libexecdir value 
	(bug #91169)

2003-02-10  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

Thu Jan 30 22:28:43 2003  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_interface.schemas.in: change default GTK+ theme.

2003-01-23  Alexander Larsson  <alexl@redhat.com>

	* libgnome/Makefile.am (libgnome_2_la_LDFLAGS): 
	Correct version number error.
	
	* configure.in:
	Add EXTRAVERSION and set to .1
	Add missing translations to ALL_LINGUAS.

2003-01-22  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-21  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Fix libtool versioning. Up number to 2.2.0
