@@ -1,3 +1,9 @@
+2003-04-29  Kjartan Maraas <kmaraas@gnome.org>
+
+	*  help-converters/man/gnome-man2html2.c:
+	*  help-converters/man/Makefile.am: Pull up fixes from
+	HEAD.
+
 2003-04-11  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
 
 	*  libgnome/gnome-url.c (gnome_url_show_with_env):
